test/types/scalar/bradc/assignUintNegative.good
assignUintNegative.chpl:3: error: Cannot initialize 'x' of type 'uint(64)' from '-2'
