test/types/scalar/bradc/assignUintNegative.chpl
var x: uint;

x = -2;

